Closed Bug 336590 Opened 19 years ago Closed 19 years ago

Caret can not be placed after [space] at the end of a wrapped line in textarea, using the mouse

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: nir123, Assigned: uriber)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060503 Minefield/3.0a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060503 Minefield/3.0a1 Follow the instructions in the testcase. Reproducible: Always
Attached file testcase
Regression range: 20060419 - 20060420
Keywords: regression, testcase
I have some builds in between and the problem happened between 1.9a1_2006041913 and 1.9a1_2006041915. Sounds familiar to me but I can't find the dupe so maybe I'm mistaken.
Actually, this is probably due to my fix for bug 334256.
Assignee: nobody → uriber
Blocks: 334256
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Hardware: PC → All
Summary: Caret can not be placed after [space] at the end of the line in textarea → Caret can not be placed after [space] at the end of a wrapped line in textarea, using the mouse
Attached file testcase2
Probably related to this bug (it has the same regression range) I get a caret **** at the end of the first line when following the instructions in the testcase.
Attached patch patchSplinter Review
nsTypedSelection::setAnchorFocusRange() turned out not to be the right place for fixing bug 334256. The click case reaches this method via nsTypedSelection::Collapse(), after setting the hint correctly. So I pulled the fix one level up - into nsTypedSelection::AddRange().
Attachment #221091 - Flags: superreview?(roc)
Attachment #221091 - Flags: review?(roc)
Status: NEW → ASSIGNED
Attachment #221091 - Flags: superreview?(roc)
Attachment #221091 - Flags: superreview+
Attachment #221091 - Flags: review?(roc)
Attachment #221091 - Flags: review+
Checked in: Checking in layout/generic/nsSelection.cpp; /cvsroot/mozilla/layout/generic/nsSelection.cpp,v <-- nsSelection.cpp new revision: 3.238; previous revision: 3.237 done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Verified FIXED on the trunk using SeaMonkey build 2006-08-05-08 under Windows XP with: https://bugzilla.mozilla.org/attachment.cgi?id=220771 -and- https://bugzilla.mozilla.org/attachment.cgi?id=220797 In the former, I can successfully place the cursor/caret after the space using the mouse (it doesn't go to the second line, below), and in the latter I don't get the caret turds like I used to.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: