Bug 336590: Caret can not be placed after space at the end of a wrapped line in textarea, using the mouse. r+sr=roc